Source/WebCore: [CoordGfx] Regression from r135212: big layers with transform animations sometime fail to render tiles https://bugs.webkit.org/show_bug.cgi?id=109179

Reviewed by Jocelyn Turcotte.

Fix adjustForContentsRect logic for AC layers that are higher or wider than the visible rect.

Force updates of the visible rect while it is animating, and until we have done one last update after
it stops animating.

Test: compositing/transitions/transform-on-large-layer.html

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::adjustForContentsRect):
(WebCore::TiledBackingStore::computeCoverAndKeepRect):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::CoordinatedGraphicsLayer):
(WebCore::CoordinatedGraphicsLayer::flushCompositingStateForThisLayerOnly):
(WebCore::CoordinatedGraphicsLayer::computePixelAlignment):
(WebCore::CoordinatedGraphicsLayer::computeTransformedVisibleRect):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:
(CoordinatedGraphicsLayer):

LayoutTests: [CoordGfx] Regression from r135212: big layers with transform animations sometime fail to render tiles.
https://bugs.webkit.org/show_bug.cgi?id=109179

Reviewed by Jocelyn Turcotte.

Test of a large layer with an animated transform. Skipped on WK1 due to resize event not firing in DRT.

* compositing/transitions/transform-on-large-layer-expected.html: Added.
* compositing/transitions/transform-on-large-layer.html: Added.
* platform/mac/TestExpectations:
* platform/qt-5.0-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/128194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142979 268f45cc-cd09-0410-ab3c-d52691b4dbfc